buscar quantidade de registros distintos por culuna